Fixed basic tokenizer,added basic renmbering and space removing, syntax highlighting for basic comments and methods.

--- a/TVCStudio/TVCStudio.csproj
+++ b/TVCStudio/TVCStudio.csproj
@@ -145,6 +145,7 @@
     <Compile Include="Settings\AssemblyIndentationSettings.cs" />
     <Compile Include="SourceCodeHandling\BasicCodeAnalyzer.cs" />
     <Compile Include="SourceCodeHandling\BasicCodeFolding.cs" />
+    <Compile Include="SourceCodeHandling\BasicCodeRenumbering.cs" />
     <Compile Include="SourceCodeHandling\ClockCycleMargin.cs" />
     <Compile Include="SourceCodeHandling\CodeAnalyzer.cs" />
     <Compile Include="SourceCodeHandling\CodeFolding.cs" />
