Fixed renumbering issue, simple basic code detection.

--- a/TVCStudio/TVCStudio.csproj
+++ b/TVCStudio/TVCStudio.csproj
@@ -145,7 +145,6 @@
     <Compile Include="Settings\AssemblyIndentationSettings.cs" />
     <Compile Include="SourceCodeHandling\Basic\BasicCodeAnalyzer.cs" />
     <Compile Include="SourceCodeHandling\Basic\BasicCodeFolding.cs" />
-    <Compile Include="SourceCodeHandling\Basic\BasicCodeHandler.cs" />
     <Compile Include="SourceCodeHandling\Assembly\ClockCycleMargin.cs" />
     <Compile Include="SourceCodeHandling\CodeAnalyzer.cs" />
     <Compile Include="SourceCodeHandling\CodeFolding.cs" />
@@ -155,6 +154,7 @@
     <Compile Include="SourceCodeHandling\TextMarker.cs" />
     <Compile Include="SourceCodeHandling\TextMarkerService.cs" />
     <Compile Include="SourceCodeHandling\CodeIntellisense.cs" />
+    <Compile Include="ViewModels\Converters\AddressConverter.cs" />
     <Compile Include="ViewModels\Converters\ComparisonConverter.cs" />
     <Compile Include="ViewModels\Document\AssemblyDocumentViewModel.cs" />
     <Compile Include="ViewModels\Document\BasicDocumentViewModel.cs" />
@@ -238,6 +238,7 @@
     <Compile Include="Properties\AssemblyInfo.cs">
       <SubType>Code</SubType>
     </Compile>
+    <Resource Include="Views\Images\simplified.png" />
     <Resource Include="Views\Images\QuickSearch.png" />
     <Resource Include="Views\Images\FindAndReplace.png" />
     <Resource Include="Views\Images\Settings.png" />
@@ -347,82 +348,82 @@
   <ItemGroup>
     <PublishFile Include="de\Xceed.Wpf.AvalonDock.resources">
       <Visible>False</Visible>
-      <PublishState>Exclude</PublishState>
-      <IncludeHash>True</IncludeHash>
       <Group>
       </Group>
       <TargetPath>
       </TargetPath>
+      <PublishState>Exclude</PublishState>
+      <IncludeHash>True</IncludeHash>
       <FileType>Satellite</FileType>
     </PublishFile>
     <PublishFile Include="es\Xceed.Wpf.AvalonDock.resources">
       <Visible>False</Visible>
-      <PublishState>Exclude</PublishState>
-      <IncludeHash>True</IncludeHash>
       <Group>
       </Group>
       <TargetPath>
       </TargetPath>
+      <PublishState>Exclude</PublishState>
+      <IncludeHash>True</IncludeHash>
       <FileType>Satellite</FileType>
     </PublishFile>
     <PublishFile Include="fr\Xceed.Wpf.AvalonDock.resources">
       <Visible>False</Visible>
-      <PublishState>Exclude</PublishState>
-      <IncludeHash>True</IncludeHash>
       <Group>
       </Group>
       <TargetPath>
       </TargetPath>
+      <PublishState>Exclude</PublishState>
+      <IncludeHash>True</IncludeHash>
       <FileType>Satellite</FileType>
     </PublishFile>
     <PublishFile Include="it\Xceed.Wpf.AvalonDock.resources">
       <Visible>False</Visible>
-      <PublishState>Exclude</PublishState>
-      <IncludeHash>True</IncludeHash>
       <Group>
       </Group>
       <TargetPath>
       </TargetPath>
+      <PublishState>Exclude</PublishState>
+      <IncludeHash>True</IncludeHash>
       <FileType>Satellite</FileType>
     </PublishFile>
     <PublishFile Include="pt-BR\Xceed.Wpf.AvalonDock.resources">
       <Visible>False</Visible>
-      <PublishState>Exclude</PublishState>
-      <IncludeHash>True</IncludeHash>
       <Group>
       </Group>
       <TargetPath>
       </TargetPath>
+      <PublishState>Exclude</PublishState>
+      <IncludeHash>True</IncludeHash>
       <FileType>Satellite</FileType>
     </PublishFile>
     <PublishFile Include="ro\Xceed.Wpf.AvalonDock.resources">
       <Visible>False</Visible>
-      <PublishState>Exclude</PublishState>
-      <IncludeHash>True</IncludeHash>
       <Group>
       </Group>
       <TargetPath>
       </TargetPath>
+      <PublishState>Exclude</PublishState>
+      <IncludeHash>True</IncludeHash>
       <FileType>Satellite</FileType>
     </PublishFile>
     <PublishFile Include="ru\Xceed.Wpf.AvalonDock.resources">
       <Visible>False</Visible>
-      <PublishState>Exclude</PublishState>
-      <IncludeHash>True</IncludeHash>
       <Group>
       </Group>
       <TargetPath>
       </TargetPath>
+      <PublishState>Exclude</PublishState>
+      <IncludeHash>True</IncludeHash>
       <FileType>Satellite</FileType>
     </PublishFile>
     <PublishFile Include="sv\Xceed.Wpf.AvalonDock.resources">
       <Visible>False</Visible>
-      <PublishState>Exclude</PublishState>
-      <IncludeHash>True</IncludeHash>
       <Group>
       </Group>
       <TargetPath>
       </TargetPath>
+      <PublishState>Exclude</PublishState>
+      <IncludeHash>True</IncludeHash>
       <FileType>Satellite</FileType>
     </PublishFile>
   </ItemGroup>
